# template

./: .darglint  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.yml  setup.cfg
.github/workflows/: ci.yml
docs/: _config.yml  intro.md  references.bib
docs/source/: conf.py  index.rst
requirements/: base.txt  dev.in  dev.txt
tools/: Dockerfile  ci-pre-commit-config.yaml  ci_checks.sh  ci_run.sh
