# >>>> Style ====##
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --no-cov-on-fail"
testpaths = [
    "tests",
    "tests/unit",
    "tests/integration",
]

[tool.coverage.run]
omit = ["tests/", "setup.py"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 95
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
