# >>> Testing/Checkers >>>
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3

[tool.pylint.messages_control]
disable = "C0330, C0326, logging-fstring-interpolation"

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --no-cov-on-fail"  # Change to your project folder: `--cov=<folder>`
testpaths = [
    "tests",
    "tests/unit",
    "tests/integration",
]

[tool.coverage.run]
omit = ["tests/", "setup.py"]

[tool.coverage.report]
show_missing = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 95
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.license_check]
allowed_licenses = ["MIT", "BSD", "Apache", "LGPL", "MPL 2.0", "ISCL", "Python Software Foundation License", "PSF"]
excluded_packages = ["pylint"]
warn = true
lookup = true
# <<< Testing/Checkers <<<

# See https://github.com/s0undt3ch/setuptools-declarative-requirements
[build-system]
requires = ["setuptools", "wheel", "setuptools-declarative-requirements"]
build-backend = "setuptools.build_meta"
