# >>> Configure Python package >>>
[metadata]
name = mypackage
version = 0.0.1
description = A description of the package
long_description = file: README.md LICENSE.md
long_description_content_type = text/markdown
license = MIT
# url =
author = Author name
author_email = author@example.com
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
packages=find:

# See https://github.com/s0undt3ch/setuptools-declarative-requirements
[requirements-files]
install_requires = requirements/base.in
tests_require = requirements/dev.in
# <<< Configure Python package <<<

# >>> Testing/Checkers >>>
[mypy]
follow_imports = silent
ignore_missing_imports = True

[codespell]
skip = ./docs,./build,./.*
quiet-level = 3

[pycodestyle]
max-line-length = 100
# <<< Testing/Checkers <<<
